1. Made changes fixing undefined in filters. 2. The 'filter wizard' form-alignment is fixed. 3. Mref search results are better shown

--- a/molgenis-omx-dataexplorer/src/main/resources/css/dataexplorer.css
+++ b/molgenis-omx-dataexplorer/src/main/resources/css/dataexplorer.css
@@ -192,6 +192,8 @@ ul.fancytree-container {
 
 .form-horizontal .controls {
 	margin-left: 4px;
+	display: inline-block;
+	padding-left: 20px;
 }
 
 .ui-rangeSlider-bar {
